# video-service-client-cpp

./: CMakeLists.txt  README.md  VideoStreamClient.cpp  VideoStreamClient.hpp  main.cpp
